Design Document Update

--- a/Senior_Design/Design Document.tex
+++ b/Senior_Design/Design Document.tex
@@ -286,7 +286,7 @@ We could ensure claw will not break the object if grasped successfully. Therefor
 \begin{table}[H]
     \centering
     \caption{Example of a Table and Its Title}
-    \label{tab:eg-table}
+    \label{Cost-table}
     \begin{tabular}{@{}c|cc@{}}
         \toprule
         Part                & Electricity  & Magnetism \\ \midrule
