--- a/Senior_Design/references.bib
+++ b/Senior_Design/references.bib
@@ -18,6 +18,13 @@
   number = {2},
   pages = {100-120},
 }
+@article{Gichane2024,
+    author = {M. M. Gichane and J. B. Byiringiro and M. Benoussaad and M. Rakotondrabe},
+    title = {Human-Centric Framework for Robotic Assembly for Industry of the Future},
+    journal = {International Journal of Precision Engineering and Manufacturing},
+    year = {2024},
+    pages = {1-19}
+}
 % END: Random Journal Paper
 
 % BEGIN: Random Webpage
@@ -35,6 +42,38 @@
   year      = {2015},
   url       = {https://www.manualslib.com/manual/2019611/Universal-Robots-Ur3-Cb3.html?page=104},
   note      = {2025-04-10},
+}
+
+@online{ARXroboticsX2025,
+    author = {{ARXroboticsX}},
+    title = {ARX VR SDK},
+    year = {2025},
+    url = {https://github.com/ARXroboticsX/ARX_VR_SDK/blob/main/%E8%AE%A4%E8%AF%86VR.md},
+    note = {2025-04-14}
+}
+
+@online{MirCore2025,
+    author = {MirCore},
+    title = {Unity-Object-Detection-and-Localization-with-VR},
+    year = {2025},
+    url = {https://github.com/MirCore/Unity-Object-Detection-and-Localization-with-VR},
+    note = {2025-04-14}
+}
+
+@online{Jain2024,
+    author = {R. Jain},
+    title = {Mechanical Gripper},
+    year = {2024},
+    month = {October},
+    url = {https://grabcad.com/library/mechanical-gripper-14},
+    note = {2025-04-14}
+}
+
+@online{IEEE,
+    author = {{IEEE}},
+    title = {IEEE Code of Ethics},
+    url = {https://www.ieee.org/about/index.html},
+    note = {2025-04-14}
 }
 % END: Random Webpage
 
